Conexão com banco SQLite

--- a/PlaceSearchAPI/PlaceSearchAPI.csproj
+++ b/PlaceSearchAPI/PlaceSearchAPI.csproj
@@ -10,11 +10,21 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Contracts" Version="2.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-	<DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.Web.PageInspector.Loader">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Web Tools\Page Inspector\Microsoft.VisualStudio.Web.PageInspector.Loader.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
