--- a/PlaceSearchAPI/appsettings.json
+++ b/PlaceSearchAPI/appsettings.json
@@ -1,15 +1,17 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+  "ConnectionStrings": {
+    "libraryDBConnectionString": "Server=localhost;Port=3306;Database=place_search;User=root;Password=;"
+  },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning"
+        },
+        "Console": {
+            "LogLevel": {
+                "Default": "Warning"
+            }
+        }
     }
-  }
 }
+
